Fix size on small error card in create form

--- a/frontend/src/stylesheets/components/hunt/_create_form.scss
+++ b/frontend/src/stylesheets/components/hunt/_create_form.scss
@@ -224,7 +224,7 @@
   height: 400px;
   width: 400px;
   top: 200px;
-  left: 550px;
+  left: 200px;
   z-index: 10;
   transform: rotate(-10deg);
   font-size: 40px;
@@ -239,12 +239,12 @@
   padding: 20px;
   display: flex;
   position:absolute;
-  left: 89.7%;
+  left: 87.8%;
   top: 5%;
   z-index: 20;
   background-color: $lavender;
-  height: 300px;
-  width: 227px;
+  height: 275px;
+  width: 200px;
   font-size: 40px;
   font-weight: bold;
   letter-spacing: .1em;
